KSENROLL-12178: Fix for spacing of cards in Registration.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@66360 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/card.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/card.less
@@ -93,6 +93,7 @@
 }
 
 .panel-group  .panel{
+    margin-bottom: 10px;
     border-width: 1px 1px 2px 1px;
 }
 /**** End ****/
